[package]
name = "audio-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "audio-visualizer"

[dependencies]
nannou = "0.18.1"
nannou_audio = "0.18.0"
audrey = "0.3"
rustfft = "6.0"